add eslint-config-airbnb peer dependencies as dependencies
Unfortunately the eslint module resolver cannot resolve the plugin
packages relative to the configuration file. It seems that it is trying
to use the packages from this preset instead of using the packages from the
project folder.

I think this might be related to neutrino-lint-base having eslint as a
dependency, instead of a peerDependency.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "homepage": "https://github.com/guzart/neutrino-preset-airbnb#readme",
   "dependencies": {
     "deepmerge": "^1.3.2",
+    "eslint": "^3.16.1",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.10.0",
     "eslint-config-airbnb": "^14.1.0",
     "neutrino-lint-base": "^4.3.1"
   },
