--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
   },
   "homepage": "https://github.com/guzart/neutrino-preset-airbnb#readme",
   "dependencies": {
-    "deepmerge": "^1.3.2",
-    "eslint": "^3.16.1",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.10.0",
+    "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
-    "neutrino-lint-base": "^4.3.1"
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "neutrino-middleware-eslint": "^5.0.0"
   },
   "peerDependencies": {
-    "neutrino": "^4.0.0"
+    "neutrino": "^5.0.0"
   }
 }
